--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container text-center">
       <h1>Not All Schools Are the Same: Who Gets School-Based Health Centers—and Who Doesn’t?</h1>
       <p class="lead">by Maddie Margraf and Hannah Cerny</p>
-      <p class="lead">Last updated on EDIT CURRENT DATE</p>
+      <p class="lead">December 4 2025</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
