--- a/index.html
+++ b/index.html
@@ -103,11 +103,13 @@ School type (traditional public, charter, technical, etc.)?</p>
 
           <h2>Findings: Wide Variations Across School Types With SBHC</h2>
 
-          <p>TELL your story and SHOW your evidence. When describing charts, maps, or tables that appear further below, refer to them "...as shown in Figure 1" or "...as shown in Table 1" and include those figure/table numbers in the titles or captions below.</p>
+          <p>One of our research questions was to look at how enrollment and school sizes varies across schools both with and without School Based Health Centers. We calculated the median, in other words the average enrollment across schools with SBHC’s, which was 458 students. We then calculated the median of enrollment of schools without SBHC’s, we found the average enrollment of these schools to be 291 with programs and 392 without. This visualization depicts what percent of schools, based on size, have access to SBHC’s.  
+
+</p>
 
           <p>Embed each of your published visualizations as an HTML iframe code, following instructions in <a href='https://handsondataviz.org/embed.html'>Chapter 9 of HODV</a>, similar to the sample below.</p>
 
-          <iframe title="Connecticut created desegregated schools for only 41 percent of Hartford Black &amp;amp; Latino students in 2019-20" aria-label="Interactive area chart" id="datawrapper-chart-fdcm0" src="https://datawrapper.dwcdn.net/fdcm0/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+          <iframe title="Enrollment Size of Schools with SBHCs" aria-label="Column Chart" id="datawrapper-chart-fdcm0" src="id="datawrapper-chart-EeI2s" src="https://datawrapper.dwcdn.net/EeI2s/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="410" data-external="1"></iframe>" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
           </script>
 
           <p>EDIT CAPTIONS like this -- Figure 1: Explore the <a href="https://datawrapper.dwcdn.net/fdcm0/">interactive chart</a> AND ADD your description of the chart here. Make sure your caption includes a direct link to your published chart or map in case the embed code fails to display.</p>
