--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ So far we have found that the majority of schools with SBHCs in Connecticut are 
  <p>Research Questions: 
 How do schools with and without SBHCs vary by demographics and resources such as:</p>
    
- <p>Total student enrollment (large, medium, small schools)?</p>
- <p>School type (traditional public, charter, technical, etc.)?</p>
+ <p> 1. Total student enrollment (large, medium, small schools)?</p>
+ <p> 2. School type (traditional public, charter, technical, etc.)?</p>
 
          
 
@@ -104,7 +104,7 @@ How do schools with and without SBHCs vary by demographics and resources such as
 
           <h2>Findings: Wide Variations Across School Types With SBHC</h2>
 
-          <p>One of our research questions was to look at how enrollment and school sizes varies across schools both with and without School Based Health Centers. We calculated the median, in other words the average enrollment across schools with SBHC’s, which was 458 students. We then calculated the median of enrollment of schools without SBHC’s, we found the average enrollment of these schools to be 291 with programs and 392 without. This visualization depicts what percent of schools, based on size, have access to SBHC’s.  
+          <p style= "text-indent:40px;">One of our research questions was to look at how enrollment and school sizes varies across schools both with and without School Based Health Centers. We calculated the median, in other words the average enrollment across schools with SBHC’s, which was 458 students. We then calculated the median of enrollment of schools without SBHC’s, we found the average enrollment of these schools to be 291 with programs and 392 without. This visualization depicts what percent of schools, based on size, have access to SBHC’s.  
 
 </p>
 
@@ -114,9 +114,9 @@ How do schools with and without SBHCs vary by demographics and resources such as
 
           <p>Figure 1:Percentage of schools with SBHC's based on size <a href="https://datawrapper.dwcdn.net/fdcm0/">interactive chart</a> AND ADD your description of the chart here. Make sure your caption includes a direct link to your published chart or map in case the embed code fails to display.</p>
 
-            <p>We defined Large schools as schools with over 1,000 students, Medium schools as schools with between 350-1,000 students, and finally we defined Small schools as schools with less than 350 students. Our findings concluded that medium schools had the largest percentage of school based health centers at 60%, Small schools were at 29.69%, and finally large schools were at 10.31%. These findings were interesting as we predicted that Large schools were most likely to have SBHC’s as they are more populated and potentially have more funding. However it does make sense that medium schools have more access to SBHC’s as they are more cost effective. Small schools may not have enough funding and large schools have a much higher enrollment, therefore medium sized schools have the right size enrollment to afford and cover SBHC’s and are overall most likely more cost effective than large and small schools.</p>
+            <p style= "text-indent:40px;">We defined Large schools as schools with over 1,000 students, Medium schools as schools with between 350-1,000 students, and finally we defined Small schools as schools with less than 350 students. Our findings concluded that medium schools had the largest percentage of school based health centers at 60%, Small schools were at 29.69%, and finally large schools were at 10.31%. These findings were interesting as we predicted that Large schools were most likely to have SBHC’s as they are more populated and potentially have more funding. However it does make sense that medium schools have more access to SBHC’s as they are more cost effective. Small schools may not have enough funding and large schools have a much higher enrollment, therefore medium sized schools have the right size enrollment to afford and cover SBHC’s and are overall most likely more cost effective than large and small schools.</p>
 
-            <p>One of the questions we were asked to answer by our community partner was how certain demographics change across schools with and without SBHCs. This visualization describes the data reflecting how school types with and without SBHCs vary. Some school types are far more likely to have an SBHC than other school types. The chart shows that 88% of CT Technical Education and Career schools have SBHCs, 67% College Affiliated Schools and Endowed and Incorporated Academies Schools have SBHCs</p>
+            <p style= "text-indent:40px;">One of the questions we were asked to answer by our community partner was how certain demographics change across schools with and without SBHCs. This visualization describes the data reflecting how school types with and without SBHCs vary. Some school types are far more likely to have an SBHC than other school types. The chart shows that 88% of CT Technical Education and Career schools have SBHCs, 67% College Affiliated Schools and Endowed and Incorporated Academies Schools have SBHCs</p>
 
             <iframe title="Wide Variations Across School Types With SBHC" aria-label="Stacked Bars" id="datawrapper-chart-mUAIQ" src="https://datawrapper.dwcdn.net/mUAIQ/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="442" data-external="1"></iframe>
             
