--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@ How do schools with and without SBHCs vary by demographics and resources such as
 
           <<iframe title="Enrollment Size of Schools with SBHCs" aria-label="Column Chart" id="datawrapper-chart-EeI2s" src="https://datawrapper.dwcdn.net/EeI2s/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="410" data-external="1"></iframe></script>
 
-          <p>Figure 1:Percentage of schools with SBHC's based health centers based on size<a href="https://datawrapper.dwcdn.net/fdcm0/">interactive chart</a> </p>
+          <p>Figure 1:Percentage of schools with SBHC's based health centers based on size<a href="https://www.datawrapper.de/_/EeI2s/"</a> </p>
 
             <p style= "text-indent:40px;">We defined Large schools as schools with over 1,000 students, Medium schools as schools with between 350-1,000 students, and finally we defined Small schools as schools with less than 350 students. Our findings concluded that medium schools had the largest percentage of school based health centers at 60%, Small schools were at 29.69%, and finally large schools were at 10.31%. These findings were interesting as we predicted that Large schools were most likely to have SBHC’s as they are more populated and potentially have more funding. However it does make sense that medium schools have more access to SBHC’s as they are more cost effective. Small schools may not have enough funding and large schools have a much higher enrollment, therefore medium sized schools have the right size enrollment to afford and cover SBHC’s and are overall most likely more cost effective than large and small schools.</p>
 
             <p style= "text-indent:40px;">One of the questions we were asked to answer by our community partner was how certain demographics change across schools with and without SBHCs. This visualization describes the data reflecting how school types with and without SBHCs vary. Some school types are far more likely to have an SBHC than other school types. The chart shows that 88% of CT Technical Education and Career schools have SBHCs, 67% College Affiliated Schools and Endowed and Incorporated Academies Schools have SBHCs</p>
 
-            <iframe title="Wide Variations Across School Types With SBHC" aria-label="Stacked Bars" id="datawrapper-chart-mUAIQ" src="https://datawrapper.dwcdn.net/mUAIQ/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="442" data-external="1"></iframe>
+            <iframe title="https://www.datawrapper.de/_/mUAIQ/?v=2" scrolling="no" frameborder="0" style="border: none;" width="600" height="442" data-external="1"></iframe>
             
              <p>Figure 2: Percentage of schools with SBHC's based on school type <a href="https://datawrapper.dwcdn.net/fdcm0/">interactive chart</a>.</p>
 
